@@ -21,7 +21,8 @@ Minimum version for Boost is now 1.35.
 
 ***
 
-REPLACE ME WITH CONTENT...
+Dependencies on gtkmm/libnotify and qt are no longer needed for desktop
+notifications. Plain dbus is now sufficient.
 
 ***
 
